# emnlp2024-iesta

./: .gitattributes  .gitignore  MANIFEST.in  README.md  env_vars.py  liberal_training_1500_seed_2062021_fewshot_3_similarityFalse.csv  liberal_training_1500_seed_2062021_fewshot_3_similarityFalse.html  liberal_training_500_seed_2062021_fewshot_1_similarityFalse.html  logs_alpac  nohup.out  pyproject.toml  requirements.txt  setup.py  setup_old.py
dash_app/: Procfile  app.py  requirements.txt
data/: conservative_debate_arguments_w_effect.csv  conservative_debate_arguments_w_effect.parquet  conservative_not_found_arguments.csv  conservative_not_found_arguments.parquet  conservative_test_500_seed_2062021.csv  conservative_training_1500_seed_2062021_fewshot_3_similarityFalse.csv  conservative_training_1500_seed_2062021_fewshot_3_similarityFalse.html  conservative_training_500_seed_2062021_fewshot_1_similarityFalse.csv  conservative_training_500_seed_2062021_fewshot_1_similarityFalse.html  debate_json_structure.txt  dismiss_text.txt  flat_voter_w_effect.parquet  human_eval_dataset.csv  liberal_debate_arguments_w_effect.csv  liberal_debate_arguments_w_effect.parquet  liberal_not_found_arguments.csv  liberal_not_found_arguments.parquet  liberal_training_1000_seed_2062021_fewshot_2_similarityFalse.csv  liberal_training_1000_seed_2062021_fewshot_2_similarityFalse.html  liberal_training_1500_seed_2062021_fewshot_3_similarityFalse.html  liberal_training_500_seed_2062021_fewshot_1_similarityFalse.html  splitted_Liberal_debate_arguments_w_abstracted_effect_test0.3_random2.parquet  (+5 more)
(+138242 files in other folders)
