[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "iesta"
version = "1.4.27"
description='code for the paper IESTA'
readme = "README.md"
authors = [{ name = "Roxanne El Baff", email = "roxanne.elbaff@gmail.com" }]
license = { file = "LICENSE" }
#keywords=['iesta', 'llm', 'style-transfer']
dependencies = [
    "pandas",
    "matplotlib",
    "IPy>=1.01",
    "scipy>=1.6.2",
    "tqdm>=4.64.0",
    "fastparquet>=0.8.3",
    "pyarrow>=8.0.0",
    "clean-text>=0.6.0",
    "nlpaf>=2.1.0",
    "unidecode==1.3.6",
    "ipywidgets==8.0.4",
    "imbalanced-learn>=0.10.1",
    "datasets>=2.8.0",
    "transformers @ git+https://github.com/huggingface/transformers",
    "huggingface_hub>=0.11.1",
    "comet_ml>=3.32.6",
    "codecarbon>=2.1.4",
    "accelerate",
    "langdetect",
    "python-dotenv",
    "ydata-profiling",
    "openai"
]


[tool.poetry]
# ...
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',

]
readme = "README.md"

[project.urls]
repository = "https://github.com/roxanneelbaff/"


[tool.black]
line-length = 79
# to republish: flit build and the flit publish